[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/ItemSlot.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/UI_Theme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.05
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="Header"]
anchor_bottom = 1.0
margin_right = 46.0
text = "Health:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="Header/Health"]
margin_left = 56.0
margin_top = 31.0
margin_right = 423.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 2 )
step = 1.0
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokensCollected" type="Label" parent="Header"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.5
margin_right = 30.5
text = "Tokens Collected: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverallTokens" type="Label" parent="Header"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -39.0
margin_bottom = 39.0
text = "Overall Tokens: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="Panel" parent="."]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemSlot1" parent="Footer" instance=ExtResource( 1 )]
margin_left = 70.0
margin_top = 10.0
margin_right = 110.0
margin_bottom = 50.0

[node name="ItemSlot2" parent="Footer" instance=ExtResource( 1 )]
margin_left = 130.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 50.0
